# VisualServoController

./: CMakeLists.txt  README.md  package.xml
kinova_arm_control/: bring_to_home.sh  cartesian_pos_control.sh  dance.sh  joint_conrol.sh  start-kinect.sh  start-kinova.sh
scripts/: vision-controller.py
scripts/moveit/: dance.py  go-to-position.py  plan-named-pose.py  single-shot-grabbing.py
scripts/trash/: full-controller.py  joint_test.py  transformer-test.py  velocity_controller.py  vision-controller-backup.py
