<?xml version="1.0"?>
<package format="2">
  <name>visual_servo_controller</name>
  <version>0.0.0</version>
  <description>The visual_servo_controller package</description>
  <maintainer email="jonas@todo.todo">jonas</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>sys</build_depend>
  <build_depend>cv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>kinova_msgs</build_depend>


  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sys</build_export_depend>
  <build_export_depend>cv2</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>kinova_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>kinova_msgs</exec_depend>

  <export>

  </export>
</package>
